--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
       
       void (*build_method_source)(void* precompile, void* string_buffer, const char* class_name, const char* method_name);
       
+      This generates the source for JIT compile.
 0.9668 2022-12-20
   [New Features]
     * Added the items native API.
