Fixed the return type of the SPVM object the new_string_nolen_raw and new_string_nolen native API.
    * Fixed the return type of the SPVM object the new_string_nolen_raw and new_string_nolen native API.
      [Before]
      byte[]

      [After]
      string

--- a/Changes
+++ b/Changes
@@ -26,6 +26,14 @@
       
       [After]
       string
+
+    * Fixed the return type of the SPVM object the new_string_nolen_raw and new_string_nolen native API.
+      [Before]
+      byte[]
+      
+      [After]
+      string
+      
       
 0.9675 2022-12-27
   [Improve Exception Messages]
