--- a/Changes
+++ b/Changes
@@ -7,7 +7,10 @@
     * Added the following native APIs.
       void* (*get_compile_type_name_raw)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, int32_t dimension, int32_t flag);
       void* (*get_compile_type_name)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, int32_t dimension, int32_t flag);
-    
+    * Added the get_method_is_enum Runtime Native API.
+      
+      int32_t SPVM_API_RUNTIME_get_method_is_enum(SPVM_RUNTIME* runtime, int32_t method_id);
+      
   [Warning Fix]
     * Fixed the following warning on FreeBSD.
         warning: logical not is only applied to the left hand side of this comparison [-Wlogical-not-parentheses]
@@ -34,6 +37,8 @@
       [After]
       string
       
+  [Test Improvement]
+    * Added the tests of get_class_parent_class_id, get_method_required_args_length, get_method_required_args_length Runtime Native APIs.
       
 0.9675 2022-12-27
   [Improve Exception Messages]
