Fixed the bug that the SPVM compiler is not released.   [Bug Fix]     * Fixed the bug that the SPVM compiler is not released.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.9677 2022-01-04
   [Changes]
     * Dynamic library files are loaded at run-time instead of compile-time.
+  [Bug Fix]
+    * Fixed the bug that the SPVM compiler is not released.
 0.9676 2022-01-03
   [New Features]
     * Added the following constant values of Native API.
