Changed the name of the following a Compiler Native API.
  [Incompatible Changes]
    Changed the name of the following a Compiler Native API.
    -  int32_t (*compile_spvm)(void* compiler, const char* class_name);
    +  int32_t (*compile)(void* compiler, const char* class_name);

Do the following replacement.

find * | grep -P '\.(spvm|c|h|xs|y|pm|pod|t)$' | xargs perl -pi -e 's/compile_spvm/compile/g'

--- a/Changes
+++ b/Changes
@@ -3,6 +3,11 @@
     * Dynamic library files are loaded at run-time instead of compile-time.
   [Bug Fix]
     * Fixed the bug that the SPVM compiler is not released.
+  [Incompatible Changes]
+    Changed the name of the following a Compiler Native API.
+    -  int32_t (*compile_spvm)(void* compiler, const char* class_name);
+    +  int32_t (*compile)(void* compiler, const char* class_name);
+
 0.9676 2022-01-03
   [New Features]
     * Added the following constant values of Native API.
