Changed the names of the following a String Buffer APIs.
    * Changed the names of the following a String Buffer APIs.
      -  void (*free_string_buffer)(void* string_buffer);
      +  void (*free_object)(void* string_buffer);

Do the following replacement.

find * | grep -P '\.(spvm|c|h|xs|y|pm|pod|t)$' | xargs perl -pi -e 's/free_string_buffer/free_object/g'

--- a/Changes
+++ b/Changes
@@ -11,7 +11,9 @@
     * Changed the names of the following a String Buffer APIs.
       -  void* (*new_string_buffer_tmp)();
       +  void* (*new_object)();
-0.9676 2022-01-03
+      -  void (*free_string_buffer)(void* string_buffer);
+      +  void (*free_object)(void* string_buffer);
+
   [New Features]
     * Added the following constant values of Native API.
     
