--- a/Changes
+++ b/Changes
@@ -8,12 +8,17 @@
       -  int32_t (*compile_spvm)(void* compiler, const char* class_name);
       +  int32_t (*compile)(void* compiler, const char* class_name);
 
-    * Changed the names of the following a String Buffer APIs.
+    * Changed the names of the following a String Buffer Native APIs.
       -  void* (*new_string_buffer_tmp)();
       +  void* (*new_object)();
       -  void (*free_string_buffer)(void* string_buffer);
       +  void (*free_object)(void* string_buffer);
 
+    * Changed the names of the following a Precompile Native APIs.
+      -  void* (*new_precompile)();
+      +  void* (*new_object)();
+      -  void (*free_precompile)(void* precompile);
+      +  void (*free_object)(void* precompile);
   [New Features]
     * Added the following constant values of Native API.
     
