Changed the names of the following Compiler Native APIs.
  [Incompatible Changes]
    * Changed the names of the following Compiler Native APIs.
      -  void* (*new_compiler)();
      +  void* (*new_object)();
      -  void (*free_compiler)(void* compiler);
      +  void (*free_object)(void* compiler);

Do the following replacement.

find * | grep -P '\.(spvm|c|h|xs|y|pm|pod|t)$' | xargs perl -pi -e 's/(new|free)_compiler/${1}_object/g'

--- a/Changes
+++ b/Changes
@@ -26,6 +26,12 @@
       -  void (*free_allocator)(void* allocator);
       +  void (*free_object)(void* allocator);
 
+    * Changed the names of the following Compiler Native APIs.
+      -  void* (*new_compiler)();
+      +  void* (*new_object)();
+      -  void (*free_compiler)(void* compiler);
+      +  void (*free_object)(void* compiler);
+
   [New Features]
     * Added the following constant values of Native API.
     
