Changed the names of the following Compiler Native APIs.
  [Incompatible Changes]
    * Changed the names of the following Runtime Native APIs.
      -  void* (*new_runtime)();
      +  void* (*new_object)();
      -  void (*free_runtime)(void* runtime);
      +  void (*free_object)(void* runtime);

Do the following replacement.

find * | grep -P '\.(spvm|c|h|xs|y|pm|pod|t)$' | xargs perl -pi -e 's/(new|free)_runtime/${1}_object/g'

--- a/Changes
+++ b/Changes
@@ -32,6 +32,12 @@
       -  void (*free_compiler)(void* compiler);
       +  void (*free_object)(void* compiler);
 
+    * Changed the names of the following Runtime Native APIs.
+      -  void* (*new_runtime)();
+      +  void* (*new_object)();
+      -  void (*free_runtime)(void* runtime);
+      +  void (*free_object)(void* runtime);
+      
   [New Features]
     * Added the following constant values of Native API.
     
