--- a/Changes
+++ b/Changes
@@ -78,6 +78,16 @@
       
       [After]
       string
+  
+  [Compilation Error Message Fix]
+    * Fixed the compilation error messages
+      [Before]
+      The class "%s" method
+      The instance "%s" method
+      
+      [After]
+      The "%s" class method
+      The "%s" instance method
       
   [Test Improvement]
     * Added the tests of get_class_parent_class_id, get_method_required_args_length, get_method_required_args_length Runtime Native APIs.
