--- a/Changes
+++ b/Changes
@@ -119,6 +119,10 @@
     * Added the tests of get_class_parent_class_id, get_method_required_args_length, get_method_required_args_length Runtime Native APIs.
   [Improve Exception Messages]
     * Improve the exception messages of Exchange API.
+  [Memory Usage Degration]
+    * Internal object data has the native_object member variable. This size is the size of void*.
+      This is used for the pointer class.
+  
 0.9675 2022-12-27
   [Improve Exception Messages]
     * Improve the exception messages of Exchange API.
