--- a/Changes
+++ b/Changes
@@ -66,7 +66,9 @@
     * Added the following Runtime Native APIs.
       
       int32_t (*get_type_flag)(SPVM_RUNTIME* runtime, int32_t type_id);
-      
+    * The pointer class can have fields.
+    * The object of the pointer class can be created by the new operator.
+    * The pointer class can inherit the parent class.
   [Warning Fix]
     * Fixed the following warning on FreeBSD.
         warning: logical not is only applied to the left hand side of this comparison [-Wlogical-not-parentheses]
