--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.9681 2022-01-11
+  [New Features]
+    * Added the following Compiler Native APIs.
+    
+      void (*clear_module_dirs)(SPVM_COMPILER* compiler);
+    
 0.9680 2022-01-07
   [New Features]
     * Added the pointer class desciptor. This is the same as the pointer_t descriptor.
