Implemented SPVM::Builder::Compiler and the compiler is separated from SPVM::Builder

--- a/Changes
+++ b/Changes
@@ -21,6 +21,7 @@
     * Removed the env field in the SPVM::Builder class.
     * Removed the runtime field in the SPVM::Builder class.
     * Added the $SPVM::INTERPRETER package variable.
+    * Added SPVM::Builder::Compiler and the compiler is separated from SPVM::Builder
     
 0.9680 2022-01-07
   [New Features]
