--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.9682 2022-01-14
+  [Internal Compatible Changes]
+    * The runtime field in the SPVM::Builder::CC is renamed to the at_runtime field.
+    * The build_runtime method in the SPVM::Builder::CC is renamed to the build_at_runtime method.
 0.9681 2022-01-13
   [New Features]
     * Added the following Compiler Native APIs.
