--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
   [Internal Compatible Changes]
     * The runtime field in the SPVM::Builder::CC is renamed to the at_runtime field.
     * The build_runtime method in the SPVM::Builder::CC is renamed to the build_at_runtime method.
+    * The module_dirs method in the SPVM::Builder save the field to its instance instead of the compiler object.
   [Incompatible Changes]
     * Removed the prepare Runtime Native API. This method is called in the build Runtime Native API automatically.
 0.9681 2022-01-13
